# suprascalar

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  memo.txt
examples/: day1_inference.rs  day2_structured.rs  day4_dualmodel.rs  day5_speculative_execution5_saved.rs  day6_simple_agent.rs  day7_multiturn.rs  day8_toolcall.rs  day9_toolcall_terminal.rs
src/: agent.rs  error.rs  lib.rs
src/agents/: mod.rs  qwen_agent.rs
src/candle_transformers_patched/: quantized_qwen3.rs
src/models/: mod.rs  qqwen3.rs
src/tools/: docker.rs  file_io.rs  ls.rs  mod.rs  terminal.rs
